# product-shopping-skill

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
cookbook/: 01-quickstart.md  02-google-sheets-credentials.md  03-api-keys.md  04-add-retailer-adapter.md  05-scoring.md  06-deploy-web-app.md
data/: sample_keyboards.csv  schema.json
docs/: architecture.md  screenshots.md
scripts/: run_pipeline.py
skills/keyboard-shopping/: SKILL.md  _meta.json
skills/keyboard-shopping/scripts/: search.py
skills/product-shopping/: SKILL.md  _meta.json
skills/product-shopping/scripts/: search.py
src/: __init__.py  filters.py  output.py  output_formats.py  preferences.py  schema.py  scoring.py  scoring_profile.py
src/adapters/: __init__.py  amazon_adapter.py  base.py  bestbuy_adapter.py  csv_adapter.py  nimble_adapter.py  walmart_adapter.py
src/enrichment/: __init__.py  reviews.py
tests/: test_adapters.py  test_filters.py  test_mode.py  test_nimble_adapter.py  test_output_formats.py  test_preferences.py  test_retry.py  test_schema.py  test_scoring.py
web/: keyboard_finder.html
